# XtlSharp

./: .gitignore  BasicImpl-Status.txt  LICENSE  README.md
examples/ScratchPad/: Program.cs  ScratchPad.csproj
src/: XtlSharp.sln
src/XtlSharp/: DType.cs  XArray.cs  XArrayRef.cs  XtlSharp.csproj  xt.Basic.cs  xt.BasicArithmetic.cs  xt.Classify.cs  xt.ErrorGamma.cs  xt.Exponential.cs  xt.Hyperbolic.cs  xt.Indexing.cs  xt.NearestInt.cs  xt.Power.cs  xt.Random.cs  xt.Reducing.cs  xt.Trignometric.cs  xt.cs
src/XtlSharp/Native/: EnumOps.cs  NativeHelper.cs  NativeWrapper.cs
src/libxtensor/: CMakeLists.txt  fillcopy.cpp  fillcopy.h  general.cpp
src/libxtl/: CMakeLists.txt  CMakeSettings.json  ClipClosePow.cpp  ClipClosePow.h  TensorRef.h  binary_func.cpp  binary_func.h  elementwise.cpp  elementwise.h  fillcopy.cpp  fillcopy.h  general.h  initializers.cpp  initializers.h  misc.h  random.cpp  random.h  reducing.cpp  reducing.h  slicing.cpp  slicing.h
src/libxtl/xtensor/: xassign.hpp
src/libxtl/xtensor-blas/: xblas_config_cling.hpp
src/libxtl/xtensor-io/: xtensor_io_config.hpp
src/xTensor.Net/: xTensor.Net.sln
src/xTensor.Net/xTensor.Net/: DType.cs  Shape.cs  Tensor.cs  TensorRef64.cs  XtlSharp.csproj  xTensor.Net.csproj
src/xTensor.Net/xTensor.Net/Native/: Helper.cs  NativeWrapper.cs
